--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "ext-json": "*",
         "kint-php/kint": "^3.3",
         "psr/log": "^1.1",
-        "laminas/laminas-escaper": "^2.6"
+        "laminas/laminas-escaper": "^2.6",
+        "twbs/bootstrap": "4.0.0"
     },
     "require-dev": {
         "codeigniter4/codeigniter4-standard": "^1.0",
