--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "homepage": "https://codeigniter.com",
     "license": "MIT",
     "require": {
+        "stripe/stripe-php": "7.*",
         "php": ">=7.2",
         "ext-curl": "*",
         "ext-intl": "*",
